# CMakeRob

./: CMakeCache.txt  CMakeLists.txt  CMakeRob.cpp  CMakeRob.h  Makefile  Plane.h  Point.h  README.md  cmake_install.cmake  plane.cpp
data/: points.txt_good.txt
